--- a/index.html
+++ b/index.html
@@ -1,10 +1,185 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Borhan's Website</title>
-  </head>
-  <body>
-    <h1>Hello, I'm Borhan</h1>
-    <p>This is my website. More coming soon!</p>
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 100px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        h1 {
+            font-size: 36px;
+        }
+
+        p {
+            font-size: 20px;
+        }
+
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-top: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #24292e;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            font-size: 16px;
+            transition: background-color 0.2s;
+        }
+
+        .button:hover {
+            background-color: #444;
+        }
+
+        .linkedin {
+            background-color: #0077b5;
+        }
+
+        .linkedin:hover {
+            background-color: #005983;
+        }
+
+        .email {
+            background-color: #d44638;
+        }
+
+        .email:hover {
+            background-color: #a7362b;
+        }
+
+        .projects {
+            list-style-type: none;
+            padding: 0;
+            margin-top: 30px;
+        }
+
+        .projects li {
+            margin: 10px 0;
+            font-size: 18px;
+        }
+
+        .projects a {
+            color: #007acc;
+            text-decoration: none;
+        }
+
+        .projects a:hover {
+            text-decoration: underline;
+        }
+
+        .project-card {
+            background-color: white;
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 600px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: left;
+        }
+
+        .project-card h3 {
+            margin-top: 0;
+            font-size: 22px;
+        }
+
+        .project-card p {
+            font-size: 16px;
+            color: #555;
+        }
+
+        .card-link {
+            display: inline-block;
+            margin-top: 10px;
+            color: #007acc;
+            text-decoration: none;
+        }
+
+        .card-link:hover {
+            text-decoration: underline;
+        }
+
+        .about {
+            max-width: 600px;
+            margin: 0 auto;
+            font-size: 18px;
+            line-height: 1.6;
+            color: #444;
+        }
+
+        @media (max-width: 600px) {
+            .profile-pic {
+                width: 100px;
+                height: 100px;
+            }
+
+            .button {
+                display: block;
+                margin: 10px auto;
+                width: 80%;
+                font-size: 16px;
+            }
+
+            .project-card {
+                margin: 15px 10px;
+                padding: 15px;
+            }
+
+            .about,
+            .project-card {
+                text-align: center;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <img src="images/me.jpg" alt="My photo" class="profile-pic">
+    <h2>About Me</h2>
+    <p class="about">
+        I'm a computer science student passionate about cybersecurity, cryptography, and building cool things.
+        I love working on hands-on projects, exploring new tech, and occasionally (legally) hacking stuff.
+    </p>
+
+    <p>
+        <a href="https://github.com/borhanxj" class="button" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/borhan-javadian-b0692a347" class="button linkedin" target="_blank">LinkedIn</a>
+        <a href="mailto:borhan.javadian@proton.me" class="button email">Email</a>
+    </p>
+    <h2>Projects</h2>
+
+    <div class="project-card">
+        <h3>Port Scanner</h3>
+        <p>A Python CLI tool that scans open ports on a given host.</p>
+        <a href="https://github.com/Borhanxj/py-port-scanner" target="_blank" class="card-link">View on GitHub</a>
+    </div>
+
+    <div class="project-card">
+        <h3>DeFi App</h3>
+        <p>Decentralized finance app built using smart contracts.</p>
+        <a href="https://github.com/Borhanxj/defi-blockchain-app" target="_blank" class="card-link">View on GitHub</a>
+    </div>
+
+    <div class="project-card">
+        <h3>Stress Level Analysis</h3>
+        <p>Data science project analyzing stress level using machine learning and visualizations.</p>
+        <a href="https://github.com/Borhanxj/stress-level-analysis" target="_blank" class="card-link">View on GitHub</a>
+    </div>
+
+</body>
+
 </html>
