--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <body>
     <h1>Borhan Javadian</h1>
 
-    <img src="images/me.jpg" alt="My photo" class="profile-pic">
+    <img src="src/me.jpg" alt="My photo" class="profile-pic">
     <h2>About Me</h2>
     <p class="about">
         I'm a computer science student passionate about cybersecurity, cryptography, and building cool things.
