--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <h2>About Me</h2>
     <p class="about">
         I'm a computer science student passionate about cybersecurity, cryptography, and building cool things.
-        I love working on hands-on projects, exploring new tech, and occasionally (legally) hacking stuff.
+        I love working on hands-on projects, exploring new tech, and occasionally (legally) hacking stuff!
     </p>
 
     <div class="button-group">
