--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="button-group">
         <a href="https://github.com/borhanxj" class="button" target="_blank">GitHub</a>
         <a href="https://linkedin.com/in/borhan-javadian-b0692a347" class="button linkedin" target="_blank">LinkedIn</a>
-        <a href="cv.pdf" class="button cv" target="_blank">CV</a>
+        <a href="src/cv.pdf" class="button cv" target="_blank">CV</a>
         <a href="mailto:borhan.javadian@proton.me" class="button email">Email</a>
     </div>
 
